# p2p-rendering-computation

Bindings/Haskell/: .gitignore  flake.nix  flake_deprecated.nix  p2prc.cabal
Bindings/Haskell/exampleflake/: flake.nix
Bindings/Haskell/lib/: API.hs  CLI.hs  Engine.hs
Bindings/Haskell/src/: Main.hs
